# reqwest_prac

./: Cargo.toml
src/: main.rs
